--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 	<h1>Здесь будут уроки по Java Script!</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum sint reiciendis quod adipisci doloremque veniam consequuntur voluptatibus culpa quisquam, iusto, eos aut magnam, dicta modi soluta quasi architecto! Delectus, dolorum.</p>
 </body>
 </html>
